# todo

./: .gitignore  Cargo.toml  README  database.sqlite3
auth-server/: Cargo.toml
auth-server/src/: main.rs
frontend/: .env  Cargo.toml  package-lock.json  package.json
frontend/src/: error.rs  lib.rs  project.rs  projectList.rs  project_list.rs  service.rs  todo.rs  todo_list.rs
frontend/src/service/: requests.rs
frontend/static/: index.html
migrations/2021-01-07-224436_todo_items/: down.sql  up.sql
migrations/2021-01-09-023317_add_uuid/: down.sql  up.sql
migrations/2021-01-10-184846_nested_todos/: down.sql  up.sql
migrations/2021-01-11-022820_add_complete_field/: down.sql  up.sql
migrations/2021-01-20-164552_insert_date/: up.sql
src/: main.rs  project.rs  todo.rs
src/models/: Cargo.toml  lib.rs  project.rs  schema.rs  todo.rs
