[package]
name = "auth-server"
version = "0.1.0"
authors = ["Caleb Hill <foamcactus@protoncactus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = {version = "0.24", features = ["tokio1"]}
tokio = {version = "1.0", features = ["macros"]}
futures = "0.3"

