[package]
name = "todo-app"
version = "0.1.0"
authors = ["Caleb Hill"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[net]
git-fetch-wth-cli=true

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
yew_styles = { git="https://github.com/FoamCactus/yew_styles.git", branch="add_on_change_hooks", features = ["forms","button"] }
models = {path="../src/models"}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json= "1.0"
serde = "^1.0"
console_log = {version="0.2", features = ["color"]}
log = "0.4"


