[package]
name = "models"
version = "0.1.0"
authors = ["Caleb <cahill@mtu.edu>"]
edition = "2018"

[lib]
name = "models"
path = "lib.rs"


[dependencies]
diesel = { version = "1.4.4"}
serde = {version= "^1.0",features=["derive"]}
serde_json = { version = "1.0"}
uuid = {version="0.8",features=["serde","v4","wasm-bindgen"]}
